--- a/package.json
+++ b/package.json
@@ -13,17 +13,28 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~12.0.1",
+    "@angular/cdk": "^12.0.3",
     "@angular/common": "~12.0.1",
     "@angular/core": "~12.0.1",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.0.1",
+    "@angular/material": "^12.0.3",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "@capacitor/app": "1.0.0",
     "@capacitor/core": "3.0.0",
+    "@capacitor/filesystem": "^1.0.0",
     "@capacitor/haptics": "1.0.0",
     "@capacitor/keyboard": "1.0.0",
+    "@capacitor/storage": "^1.0.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/pwa-elements": "^3.0.2",
+    "angular-calendar": "^0.28.24",
+    "chart.js": "^2.9.3",
+    "firebase": "^8.6.3",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
