--- a/package.json
+++ b/package.json
@@ -13,61 +13,65 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.1",
-    "@angular/cdk": "^12.0.3",
-    "@angular/common": "~12.0.1",
-    "@angular/core": "~12.0.1",
+    "@angular/animations": "^12.0.5",
+    "@angular/cdk": "^12.2.8",
+    "@angular/common": "^12.0.5",
+    "@angular/core": "^12.0.5",
     "@angular/fire": "^6.1.5",
-    "@angular/forms": "~12.0.1",
-    "@angular/material": "^12.0.3",
-    "@angular/platform-browser": "~12.0.1",
-    "@angular/platform-browser-dynamic": "~12.0.1",
-    "@angular/router": "~12.0.1",
+    "@angular/forms": "^12.0.5",
+    "@angular/material": "^12.2.8",
+    "@angular/platform-browser": "^12.0.5",
+    "@angular/platform-browser-dynamic": "^12.0.5",
+    "@angular/router": "^12.0.5",
     "@capacitor/app": "1.0.0",
     "@capacitor/core": "3.0.0",
-    "@capacitor/filesystem": "^1.0.0",
+    "@capacitor/filesystem": "^1.0.3",
     "@capacitor/haptics": "1.0.0",
     "@capacitor/keyboard": "1.0.0",
-    "@capacitor/storage": "^1.0.0",
-    "@ionic/angular": "^5.5.2",
+    "@capacitor/storage": "^1.2.0",
+    "@ionic/angular": "^5.8.1",
     "@ionic/pwa-elements": "^3.0.2",
-    "angular-calendar": "^0.28.24",
+    "angular-calendar": "^0.28.28",
     "chart.js": "^2.9.3",
-    "firebase": "^8.6.3",
-    "ng2-charts": "^2.3.0",
+    "electron": "^13.5.1",
+    "firebase": "^8.10.0",
+    "moment": "^2.29.1",
+    "ng2-charts": "^2.4.3",
+    "ngx-electron": "^2.2.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.1",
+    "@angular-devkit/build-angular": "^12.0.5",
     "@angular-eslint/builder": "~12.0.0",
     "@angular-eslint/eslint-plugin": "~12.0.0",
     "@angular-eslint/eslint-plugin-template": "~12.0.0",
     "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "~12.0.1",
-    "@angular/compiler": "~12.0.1",
-    "@angular/compiler-cli": "~12.0.1",
-    "@angular/language-service": "~12.0.1",
+    "@angular/cli": "^12.0.5",
+    "@angular/compiler": "^12.0.5",
+    "@angular/compiler-cli": "^12.0.5",
+    "@angular/language-service": "^12.0.5",
     "@capacitor/cli": "3.0.0",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.27",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
